# Devious-WinRM

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  todo
src/devious_winrm/: __main__.py  app.py  app2.py  cli.py  test.py
src/devious_winrm/psrp_fix/: __init__.py
src/devious_winrm/psrp_fix/_connection/: wsman.py
src/devious_winrm/psrp_fix/_io/: wsman.py
src/devious_winrm/util/: bypass_amsi.py  commands.py  completers.py  delayed_keyboard_interrupt.py  file_upload_download.py  get_command_output.py  invoke_in_memory.py  kerberos.py  keybinds.py  upload_to_memory.py
src/devious_winrm/util/scripts/: Invoke-In-Memory.ps1  Upload.ps1  UploadTo-Memory.ps1  copy.ps1
tests/: __init__.py  conftest.py  test_commands.py  test_completers.py  test_keybinds.py
tests/scripts/: setup.ps1
