[tool.poetry]
name = "devious-winrm"
version = "0.1.0"
description = "A Pentester's (work-in-progress) Powershell Client."
readme = "README.md"
authors = ["Pablo Comino <pablo@pablocomino.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
prompt_toolkit = "3.0.5"
pypsrp = { version = "1.0.0b1", extras = ["kerberos"] }

[tool.poetry.scripts]
devious-winrm = "devious_winrm.cli:app"
dwrm = "devious_winrm.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"