[project]
name = "Devious-WinRM"
version = "0.1.0"
description = "A Pentester's (work-in-progress) Powershell Client."
readme = "README.md"
authors = [
    {name = "Pablo Comino", email = "pablo@pablocomino.com"}
]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "typer>=0.9.0,<0.10.0",
    "prompt_toolkit==3.0.5",
    "pypsrp[kerberos]>=1.0.0b1,<1.1.0",
    "impacket==0.12.0"
]

[project.scripts]
devious-winrm = "devious_winrm.cli:app"
dwrm = "devious_winrm.cli:app"

[project.entry-points."pipx.run"]
devious_winrm = "devious_winrm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["ALL"]
pyupgrade.keep-runtime-typing = true
ignore = ["RUF013"]
lint.pylint.allow-magic-value-types = ["int"]
